Заполнение swagger
